--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     </div>
 
     <button class="btn-new" id="new"><i class="fas fa-plus-circle"></i>New game</button>
-    <button class="btn-roll"><i class="fas fa-recycle" id="launch"></i>Roll dice</button>
-    <button class="btn-hold"><i class="fas fa-save" id="save"></i>Hold</button>
+    <button class="btn-roll"><i class="fas fa-sync-alt"></i>Roll dice</button>
+    <button class="btn-hold"><i class="fas fa-download"></i>Hold</button>
 
     <img src="dice-4.png" alt="Dice" class="dice">
 
