--- a/index.html
+++ b/index.html
@@ -16,27 +16,27 @@
   <!-- création de l'espace de jeux -->
   <div class="playzone">
     <!-- Zone joueur 1 -->
-    <div class="player player-one active">
-      <div class="player-name" id="playerOne">Player 1</div>
-      <div class="player-score" id="scoreOne">13</div>
+    <div class="player player-0-box">
+      <div class="player-name" id="player-0">Player 1</div>
+      <div class="player-score" id="score-0">13</div>
       <div class="player-box">
         <div class="score-label">Score</div>
-        <div class="player-box-score" id="scoreBoxOne">43</div>
+        <div class="player-box-score" id="scoreBox-0">43</div>
       </div>
     </div>
     <!-- Zone jouer 2 -->
-    <div class="player player-two">
-      <div class="player-name" id="playerTwo">Player 2</div>
-      <div class="player-score" id="scoreTwo">45</div>
+    <div class="player player-1-box">
+      <div class="player-name" id="player-1">Player 2</div>
+      <div class="player-score" id="score-1">45</div>
       <div class="player-box">
         <div class="player-label">Score</div>
-        <div class="player-box-score" id="scoreBoxTwo">34</div>
+        <div class="player-box-score" id="scoreBox-1">34</div>
       </div>
     </div>
 
     <button class="btn-new" id="new"><i class="fas fa-plus-circle"></i>New game</button>
-    <button class="btn-roll"><i class="fas fa-sync-alt"></i>Roll dice</button>
-    <button class="btn-hold"><i class="fas fa-download"></i>Hold</button>
+    <button class="btn-roll" id="launch"><i class="fas fa-sync-alt"></i>Roll dice</button>
+    <button class="btn-hold" id="hold"><i class="fas fa-download"></i>Hold</button>
 
     <img src="dice-4.png" alt="Dice" class="dice">
 
